<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alexbc.taskmaster.activities.AddTaskActivity">

    <EditText
        android:id="@+id/task_description_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/task_description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/add_task_title"
        app:layout_constraintTop_toBottomOf="@+id/my_task_input" />

    <TextView
        android:id="@+id/add_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_task"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add_task_activity_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_task"
        app:layout_constraintStart_toStartOf="@+id/task_description_input"
        app:layout_constraintTop_toBottomOf="@+id/spinner_add_task_status" />

    <EditText
        android:id="@+id/my_task_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/task_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/add_task_title"
        app:layout_constraintTop_toBottomOf="@+id/add_task_title"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/submitted_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/button_add_task_activity_add_task"
        app:layout_constraintStart_toStartOf="@+id/button_add_task_activity_add_task"
        app:layout_constraintTop_toBottomOf="@+id/button_add_task_activity_add_task" />

    <TextView
        android:id="@+id/total_tasks_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/total_tasks_0"
        app:layout_constraintStart_toStartOf="@+id/button_add_task_activity_add_task"
        app:layout_constraintTop_toTopOf="@+id/submitted_text_view" />

    <Spinner
        android:id="@+id/spinner_add_task_status"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/task_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/task_description_input"
        app:layout_constraintTop_toBottomOf="@+id/task_description_input" />
</androidx.constraintlayout.widget.ConstraintLayout>