<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailActivity">

    <TextView
        android:id="@+id/text_view_task_detail_activity_task_title"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/task_detail_title"
        android:textSize="34sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskDetailTextView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:breakStrategy="high_quality"
        android:text="@string/task_detail_text_view"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskStatusTextView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/taskStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/task_status"
        app:layout_constraintStart_toStartOf="@+id/taskDetailTextView"
        app:layout_constraintTop_toBottomOf="@+id/text_view_task_detail_activity_task_title" />

    <Button
        android:id="@+id/taskDetailActivitySpeakButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="66dp"
        android:text="Speak"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>